修改了节点加载与注册逻辑

--- a/XNode.Plugin.Nodes/XNode.Plugin.Nodes.csproj
+++ b/XNode.Plugin.Nodes/XNode.Plugin.Nodes.csproj
@@ -1,13 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net6.0-windows</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<UseWPF>true</UseWPF>
 		<BaseOutputPath>..\bin\</BaseOutputPath>
 	</PropertyGroup>
 	<PropertyGroup>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
 		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 	</PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\XLib.Base\XLib.Base.csproj" />
+		<ProjectReference Include="..\XLib.Node\XLib.Node.csproj" />
+	</ItemGroup>
+
 </Project>
