--- a/XLib.Sample/XLib.Sample.csproj
+++ b/XLib.Sample/XLib.Sample.csproj
@@ -1,19 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\XLib.Animate\XLib.Animate.csproj" />
-    <ProjectReference Include="..\XLib.Base\XLib.Base.csproj" />
-    <ProjectReference Include="..\XLib.Drawing\XLib.Drawing.csproj" />
-    <ProjectReference Include="..\XLib.Math\XLib.Math.csproj" />
-    <ProjectReference Include="..\XLib.WPF\XLib.WPF.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<OutputType>WinExe</OutputType>
+		<TargetFramework>net6.0-windows</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<UseWPF>true</UseWPF>
+		<BaseOutputPath>..\bin\</BaseOutputPath>
+	</PropertyGroup>
+	<PropertyGroup>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+	</PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\XLib.Animate\XLib.Animate.csproj" />
+		<ProjectReference Include="..\XLib.Base\XLib.Base.csproj" />
+		<ProjectReference Include="..\XLib.Drawing\XLib.Drawing.csproj" />
+		<ProjectReference Include="..\XLib.Math\XLib.Math.csproj" />
+		<ProjectReference Include="..\XLib.WPF\XLib.WPF.csproj" />
+	</ItemGroup>
 
 </Project>
