--- a/XLib.WPFControl/XLib.WPFControl.csproj
+++ b/XLib.WPFControl/XLib.WPFControl.csproj
@@ -1,15 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\XLib.Base\XLib.Base.csproj" />
-    <ProjectReference Include="..\XLib.WPF\XLib.WPF.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0-windows</TargetFramework>
+		<Nullable>enable</Nullable>
+		<UseWPF>true</UseWPF>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<BaseOutputPath>..\bin\</BaseOutputPath>
+	</PropertyGroup>
+	<PropertyGroup>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+	</PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\XLib.Base\XLib.Base.csproj" />
+		<ProjectReference Include="..\XLib.WPF\XLib.WPF.csproj" />
+	</ItemGroup>
 
 </Project>
